--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <h2>Центр города </h2>
 <h2>Звоните 050-68-100-76 Ирина</h2>  </div>
 <hr>
-  </body>
+  
   <hr>
-<img  id="1" src="photo.ira\photo_2022-06-25_10-19-43.jpg">
+<img  id="1" src="photo.ira\photo_2022-06-25_10-19-43.jpg"width="1000" height="1000">
 <hr>
-<img id="2" src="photo.ira\photo_2022-06-25_10-19-59.jpg">
+<img id="2" src="photo.ira\photo_2022-06-25_10-19-59.jpg"width="1000" height="1000">
 <hr>
-<img id="3" src="photo.ira\photo_2022-06-25_10-20-05.jpg">
+<img id="3" src="photo.ira\photo_2022-06-25_10-20-05.jpg"width="1000" height="1000">
 <hr>
-
+</body>
 </html>
