--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <h2>- Одноразовые расходные материалы </h2>
 <h2>- Стерильность </h2>
 <hr>
-<div class="b">
+
 <a href="#1"><img src="photo.ira\photo_2022-06-25_10-19-43.jpg" width="200" height="200" ></a>
 <a href="#2"><img src="photo.ira\photo_2022-06-25_10-19-59.jpg" width="200" height="200" ></a>
 <a href="#3"><img src="photo.ira\photo_2022-06-25_10-20-05.jpg" width="200" height="200" ></a>
 <a href="#4"><img src="photo.ira\photo_2022-06-25_10-20-11.jpg" width="150" height="200" ></a>
- </div>
+ 
 <ul>
   <li>Губы 700 грн</li>
   <li>Брови 700 грн</li>
@@ -40,6 +40,6 @@
 <img id="2" src="photo.ira\photo_2022-06-25_10-19-59.jpg"width="1000" height="1000">
 <hr>
 <img id="3" src="photo.ira\photo_2022-06-25_10-20-05.jpg"width="1000" height="1000">
-<hr>
+<hr> </div>
 </body>
 </html>
