--- a/index.html
+++ b/index.html
@@ -9,37 +9,43 @@
       <link rel="shortcut icon" href="https://th.bing.com/th/id/R.026e738a729b402da8958841c900d574?rik=XXI6H%2bnztkJrCA&riu=http%3a%2f%2fwww.stihi.ru%2fpics%2f2013%2f06%2f14%2f6046.jpg&ehk=zUXBvkuJ3J6tZigYWbx393ds2IUBrOe122KX2%2fpYf3M%3d&risl=&pid=ImgRaw&r=0"/>
   </head>
   <body>
-    <div class="a">
-
     <img src="photo.ira\photo_2022-06-25_10-19-24.jpg" alt="Начинающий мастер перманентного макияжа">
+
 <h1>Начинающий мастер перманентного макияжа приглашает девушек на процедуру</h1>
 <hr>
 <h2>-Качественные пигменты </h2>
-<h2>- Одноразовые расходные материалы </h2>
-<h2>- Стерильность </h2>
+<h2>-Одноразовые расходные материалы </h2>
+<h2>-Стерильность </h2>
 <hr>
+   <div class="wrap">
+   <div class="block">
+   <div class="photo">
+<img src="photo.ira\photo_2022-06-25_10-19-43.jpg" width="200" height="200" ></div></div></div>
 
-<a href="#1"><img src="photo.ira\photo_2022-06-25_10-19-43.jpg" width="200" height="200" ></a>
-<a href="#2"><img src="photo.ira\photo_2022-06-25_10-19-59.jpg" width="200" height="200" ></a>
-<a href="#3"><img src="photo.ira\photo_2022-06-25_10-20-05.jpg" width="200" height="200" ></a>
-<a href="#4"><img src="photo.ira\photo_2022-06-25_10-20-11.jpg" width="150" height="200" ></a>
- 
+
+<div class="wrap2">
+<div class="block2">
+<div class="photo2">
+  <img src="photo.ira\photo_2022-06-25_10-19-59.jpg" width="200" height="200" ></div></div></div>
+
+
+  <div class="wrap3">
+  <div class="block3">
+  <div class="photo3">
+<img src="photo.ira\photo_2022-06-25_10-20-05.jpg" width="200" height="200" ></div></div></div>
+
+
 <ul>
   <li>Губы 700 грн</li>
   <li>Брови 700 грн</li>
   <li>Межресничка 700 грн</li>
 </ul>
 <hr>
+.<div class="a">
 <h2>Центр города </h2>
-<h2>Звоните 050-68-100-76 Ирина</h2>  </div>
+<h2>Звоните 050-68-100-76 Ирина</h2></div>
 <hr>
-  
+
   <hr>
-<img  id="1" src="photo.ira\photo_2022-06-25_10-19-43.jpg"width="800" height="800" >
-<hr>
-<img id="2" src="photo.ira\photo_2022-06-25_10-19-59.jpg"width="800" height="800" >
-<hr>
-<img id="3" src="photo.ira\photo_2022-06-25_10-20-05.jpg"width="800" height="800" >
-<hr> </div>
 </body>
 </html>
