--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <li>Межресничка 700 грн</li>
 </ul>
 <hr>
-.<div class="a">
+<div class="a">
 <h2>Центр города </h2>
 <h2>Звоните 050-68-100-76 Ирина</h2></div>
 <hr>
