--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Перманентный макияж. Брови. Губы. Ресницы">
     <meta name="description" content="Перманентный макияж. Брови. Губы. Ресницы">
     <link rel="stylesheet" href="style.css"/>
-      <link rel="shortcut icon" href="https://th.bing.com/th/id/R.026e738a729b402da8958841c900d574?rik=XXI6H%2bnztkJrCA&riu=http%3a%2f%2fwww.stihi.ru%2fpics%2f2013%2f06%2f14%2f6046.jpg&ehk=zUXBvkuJ3J6tZigYWbx393ds2IUBrOe122KX2%2fpYf3M%3d&risl=&pid=ImgRaw&r=0"/>
+      <link rel="shortcut icon" href="photo.ira\R.jfif"/>
   </head>
   <body>
     <img src="photo.ira\photo_2022-06-25_10-19-24.jpg" alt="Начинающий мастер перманентного макияжа">
@@ -20,13 +20,13 @@
    <div class="wrap">
    <div class="block">
    <div class="photo">
-<img src="photo.ira\photo_2022-06-25_10-19-43.jpg" width="200" height="200" ></div></div></div>
+<img src="photo.ira\IMG_20220629_110551_036.jpg" width="200" height="200" ></div></div></div>
 
 
 <div class="wrap2">
 <div class="block2">
 <div class="photo2">
-  <img src="photo.ira\photo_2022-06-25_10-19-59.jpg" width="200" height="200" ></div></div></div>
+  <img src="photo.ira\IMG_20220627_144800_671.jpg" width="200" height="200" ></div></div></div>
 
 
   <div class="wrap3">
@@ -34,6 +34,21 @@
   <div class="photo3">
 <img src="photo.ira\photo_2022-06-25_10-20-05.jpg" width="200" height="200" ></div></div></div>
 
+
+  <div class="wrap4">
+  <div class="block4">
+  <div class="photo4">
+<img src="photo.ira\Picsart_22-06-27_15-09-02-701.jpg" width="200" height="200" ></div></div></div>
+
+<div class="wrap5">
+<div class="block5">
+<div class="photo5">
+<img src="photo.ira\1.jpg" width="200" height="200" ></div></div></div>
+
+<div class="wrap5">
+<div class="block5">
+<div class="photo5">
+<img src="photo.ira\photo_2022-06-25_10-19-59.jpg" width="200" height="200" ></div></div></div>
 
 <ul>
   <li>Губы 700 грн</li>
@@ -49,3 +64,4 @@
   <hr>
 </body>
 </html>
+
